@@ -45,12 +45,14 @@ func p_blocks(w http.ResponseWriter, r *http.Request) {
 		for o := range cbasetx.TxOut {
 			rew += cbasetx.TxOut[o].Value
 		}
+		s = strings.Replace(s, "<!--BLOCK_VERSION-->", fmt.Sprint(block.Version()), 1)
 		s = strings.Replace(s, "{BLOCK_REWARD}", fmt.Sprintf("%.2f", float64(rew)/1e8), 1)
 		mi, _ := common.BlocksMiner(bl)
 		if len(mi)>10 {
 			mi = mi[:10]
 		}
 		s = strings.Replace(s, "{BLOCK_MINER}", mi, 1)
+
 
 		network.MutexRcv.Lock()
 		rb := network.ReceivedBlocks[end.BlockHash.BIdx()]
