@@ -10,19 +10,20 @@
 <tr>
 	<th colspan="3">Block info
 	<th colspan="2">Block size
+	<th colspan="3">Mining info
 	<th colspan="3">Timing in <i>ms</i>
-	<th colspan="2">Mining info
 <tr>
 	<th>Height
 	<th>Time
 	<th>Hash
 	<th align="right">TXs
 	<th align="right">kB
+	<th>Ver
+	<th>BTC
+	<th align="left">Miner
 	<th align="right">dload
 	<th align="right">verif
 	<th>ohd
-	<th>BTC
-	<th align="left">Miner
 </tr>
 <!--BLOCK_ROW-->
 </table>
